<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Proyecto_3P</string>

    <!--Activity Ingreso-->
    <string name="Titulo">Mundo Orejitas</string>
    <string name="usuario">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrartxt">¿Aún no eres miembro?</string>
    <string name="registro">¡Registrate!</string>

    <!--Activity Registro-->
    <string name="TituloRegistro">
        ¡Unete a nosotos para darle lo mejor a tu mascota!
    </string>
    <string name="nombre">Nombre de usuario:</string>
    <string name="correo">Correo Electronico:</string>
    <string name="tel">Telefono:</string>
    <string name="administrador">¿Eres Administrador?</string>
    <string name="registrar">Unirse</string>

    <!--Activity Productos-->
    <string name="productos">Catalogo de Productos</string>
    <string-array name="categorias">
        <item>Comida</item>
        <item>Accesorios</item>
        <item>Juguetes</item>
    </string-array>
    <string name="precio">Precio:</string>
    <string name="stock">Stock:</string>
    <string name="agregar">Agregar al Carrito</string>

    <!--Activity Carrito-->
    <string name="carrito">Mi Carrito</string>

    <!--Activity Compras-->
    <string name="compras">Mis Compras</string>

    <!--Activity Usuario-->
    <string name="user">Usuario</string>
    <string name="editarUser">Editar Usuario</string>
    <string name="eliminarUser">Eliminar Usuario</string>
    <string name="agregarProducto">Agregar Producto</string>
    <string name="buscarProducto">Buscar Producto</string>
    <string name="editarProducto">Editar Producto</string>
    <string name="eliminarProducto">Eliminar Producto</string>

    <!--Activity Nosotros-->
    <string name="nosotros">Nosotros</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Carrito strings -->
    <string name="mi_carrito">Mi Carrito</string>
    <string name="carrito_vacio">Tu carrito está vacío</string>
    <string name="agregar_productos">Añade productos para comenzar</string>
    <string name="total_productos">Total de productos:</string>
    <string name="total_pagar">Total a pagar:</string>
    <string name="limpiar">Limpiar</string>
    <string name="comprar_ahora">Comprar Ahora</string>
    <string name="precio_inicial">$0.00</string>
    <string name="items_inicial">0</string>
    <string name="lista_carrito">Lista de productos en el carrito</string>
</resources>
