<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catalogo"
            android:title="@string/productos" />
        <item
            android:id="@+id/nav_carrito"
            android:title="@string/carrito" />
        <item
            android:id="@+id/nav_compras"
            android:title="@string/compras" />
        <item
            android:id="@+id/nav_usuario"
            android:title="@string/user" />
        <item
            android:id="@+id/nav_nosotros"
            android:title="@string/nosotros" />
    </group>
</menu>